Adding changes in theme

--- a/web/themes/custom/imparables_bb5/templates/content/node--2.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/content/node--2.html.twig
@@ -60,8 +60,6 @@
  */
 #}
 {{ attach_library('bootstrap_barrio/node') }}
-{{ attach_library('imparables_bb5/boostrap_js') }}
-
 
 {%
   set classes = [
@@ -81,6 +79,52 @@
     {{ content }}
     
 
+            <!-- Container -->
+            <div class="container content-space-t-3">
+              <div class="row justify-content-lg-between align-items-lg-center">
+                
+                <div class="col-8 col-sm-5 col-md-5 mb-5 mb-sm-0">
+                  <img class="img-fluid" src="/themes/custom/imparables_bb5/assets/svg/illustrations/oc-growing.svg" alt="Aprendiz creciendo en su aprendizaje">
+                </div>
+                <!-- End Col -->
+
+                <div class="col-sm-7">
+                  <div class="mb-5">
+                  <h2>Programación para escolares</h2>
+                    <h1 class="display-6 mb-3">
+                      <span class="text-primary text-highlight-warning">
+                        <span class="js-typedjs"
+                            data-hs-typed-options='{
+                              "strings": ["Programación competitiva", "Pensamiento computacional", "Fundamentos de programación","Programación competitiva", "Inteligencia artificial", "Tecnología e innovación"],
+                              "typeSpeed": 70,
+                              "loop": true,
+                              "backSpeed": 30,
+                              "backDelay": 0
+                            }'> </span>
+                      </span>
+                    </h1>
+                    <p class="lead">
+                    Entiende el lenguaje de la computación y la tecnología,<br> potencia tus capacidades con inteligencia artificial</p>
+                  </div>
+
+                  <div class="d-grid d-md-flex gap-3 align-items-md-center">
+                    <a class="btn btn-primary" href="../page-login.html">Start a free trial</a>
+
+                    <!-- Fancybox -->
+                    <a class="video-player video-player-btn" href="https://www.youtube.com/watch?v=d4eDWc8g0e0" role="button" data-fslightbox="youtube-video">
+                      <span class="video-player-icon shadow-sm me-2">
+                        <i class="bi-play-fill"></i>
+                      </span>
+                      How it works
+                    </a>
+                    <!-- End Fancybox -->
+                  </div>
+                </div>
+                <!-- End Col -->
+              </div>
+              <!-- End Row -->
+            </div>
+            <!-- End Container -->
 
     <!-- Card Grid -->
     <div class="content-space-b-1 content-space-b-lg-1 bg-img-start" style="background: url(/themes/custom/imparables_bb5/assets/svg/components/shape-5.svg) center no-repeat;">
@@ -111,7 +155,8 @@
                     <a class="card card-sm card-stretched-vertical card-transition bg-img-start" href="../demo-course/course-overview.html" style="background-image: url(/themes/custom/imparables_bb5/assets/img/400x500/img13.jpg); min-height: 15rem;">
                       <div class="card-body">
                         <span class="card-subtitle text-white-70">Nuevo</span>
-                        <h4 class="card-title text-white">Programación Competitiva</h4>
+                        <h4 class="card-title text-white">Pensamiento Computacional</h4>
+                        <p>Dirigido a estudiantes de 5to y 6to de primaria</p>
 
                         <div class="card-footer pt-0">
                           <span class="card-link text-white">Leer más</span>
@@ -128,7 +173,7 @@
                     <a class="card card-sm card-stretched-vertical card-transition bg-img-start" href="../demo-course/course-overview.html" style="background-image: url(/themes/custom/imparables_bb5/assets/img/400x500/img14.jpg); min-height: 15rem;">
                       <div class="card-body">
                         <span class="card-subtitle text-white-70">Nuevo</span>
-                        <h4 class="card-title text-white">Programación Teens</h4>
+                        <h4 class="card-title text-white">Introducción a la Programación</h4>
 
                         <div class="card-footer pt-0">
                           <span class="card-link text-white">Leer más</span>
@@ -147,7 +192,7 @@
                     <a class="card card-sm card-stretched-vertical card-transition bg-img-start" href="../demo-course/course-overview.html" style="background-image: url(/themes/custom/imparables_bb5/assets/img/400x500/img15.jpg); min-height: 15rem;">
                       <div class="card-body">
                         <span class="card-subtitle text-white-70">Nuevo</span>
-                        <h4 class="card-title text-white">Programación Kids</h4>
+                        <h4 class="card-title text-white">Programación Competitiva</h4>
 
                         <div class="card-footer pt-0">
                           <span class="card-link text-white">Leer más</span>
