--- a/web/themes/custom/imparables_bb5/templates/layout/page.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page.html.twig
@@ -257,65 +257,63 @@
             {% endif %}
 
               {% if logged_in %}
+              <!-- Account -->
+              <li class="hs-has-sub-menu nav-item">
+                <a id="navbarShoppingCartDropdown" class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                  >
+                  <img class="avatar avatar-xs avatar-circle" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
+                </a>
 
-
-                <!-- Account -->
-                <div class="dropdown">
-                  <a href="#" id="navbarShoppingCartDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                    data-bs-dropdown-animation >
-                    <img class="avatar avatar-xs avatar-circle" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
+                <div class="hs-sub-menu hs-position-left dropdown-menu" aria-labelledby="navbarShoppingCartDropdown"
+                    style="min-width: 16rem;">
+                  <a class="d-flex align-items-center p-2" href="#">
+                    <div class="flex-shrink-0">
+                      <img class="avatar" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
+                    </div>
+                    <div class="flex-grow-1 ms-3">
+                      <span class="d-block fw-semibold">Lida Reidy <span class="badge bg-primary ms-1">Pro</span></span>
+                      <span class="d-block text-muted small">lidareidy@gmail.com</span>
+                    </div>
                   </a>
 
-                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarShoppingCartDropdown"
-                      style="min-width: 16rem;">
-                    <a class="d-flex align-items-center p-2" href="#">
-                      <div class="flex-shrink-0">
-                        <img class="avatar" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
-                      </div>
-                      <div class="flex-grow-1 ms-3">
-                        <span class="d-block fw-semibold">Lida Reidy <span class="badge bg-primary ms-1">Pro</span></span>
-                        <span class="d-block text-muted small">lidareidy@gmail.com</span>
-                      </div>
-                    </a>
+                  <div class="dropdown-divider my-3"></div>
 
-                    <div class="dropdown-divider my-3"></div>
+                  <a class="dropdown-item" href="#">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-chat-left-dots"></i>
+                  </span> Messages
+                  </a>
+                  <a class="dropdown-item" href="#">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-wallet2"></i>
+                  </span> Purchase history
+                  </a>
+                  <a class="dropdown-item" href="/user">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-person"></i>
+                  </span> Account
+                  </a>
+                  <a class="dropdown-item" href="#">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-credit-card"></i>
+                  </span> Payment methods
+                  </a>
 
-                    <a class="dropdown-item" href="#">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-chat-left-dots"></i>
-                    </span> Messages
-                    </a>
-                    <a class="dropdown-item" href="#">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-wallet2"></i>
-                    </span> Purchase history
-                    </a>
-                    <a class="dropdown-item" href="/user">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-person"></i>
-                    </span> Account
-                    </a>
-                    <a class="dropdown-item" href="#">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-credit-card"></i>
-                    </span> Payment methods
-                    </a>
+                  <div class="dropdown-divider"></div>
 
-                    <div class="dropdown-divider"></div>
-
-                    <a class="dropdown-item" href="#">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-question-circle"></i>
-                    </span> Help
-                    </a>
-                    <a class="dropdown-item" href="/user/logout">
-                    <span class="dropdown-item-icon">
-                      <i class="bi-box-arrow-right"></i>
-                    </span> Log out
-                    </a>
-                  </div>
+                  <a class="dropdown-item" href="#">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-question-circle"></i>
+                  </span> Help
+                  </a>
+                  <a class="dropdown-item" href="/user/logout">
+                  <span class="dropdown-item-icon">
+                    <i class="bi-box-arrow-right"></i>
+                  </span> Log out
+                  </a>
                 </div>
-                <!-- End Account -->
+              </li>
+              <!-- End Account -->
               {% endif %}
 
             </ul>
